--- a/src/BloodRush.Notifier/BloodRush.Notifier.csproj
+++ b/src/BloodRush.Notifier/BloodRush.Notifier.csproj
@@ -29,8 +29,11 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\src\BloodRush.Contracts\BloodRush.Contracts.csproj"/>
+        <ProjectReference Include="..\BloodRush.Contracts\BloodRush.Contracts.csproj" />
+
     </ItemGroup>
+
+
 
 
 </Project>
