--- a/src/BloodRush.Donors.API/BloodRush.Donors.API.csproj
+++ b/src/BloodRush.Donors.API/BloodRush.Donors.API.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1"/>
+        <PackageReference Include="Dapper" Version="2.1.24" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0"/>
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.2"/>
         <PackageReference Include="MediatR" Version="12.1.1"/>
@@ -30,6 +31,7 @@
         </Content>
 
         <ProjectReference Include="..\BloodRush.Contracts\BloodRush.Contracts.csproj"/>
+
 
 
 
