--- a/src/BloodRush.Donors.API/BloodRush.Donors.API.csproj
+++ b/src/BloodRush.Donors.API/BloodRush.Donors.API.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.9"/>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1"/>
         <PackageReference Include="Dapper" Version="2.1.24" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0"/>
@@ -22,6 +23,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.14"/>
+        <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
@@ -31,6 +33,8 @@
         </Content>
 
         <ProjectReference Include="..\BloodRush.Contracts\BloodRush.Contracts.csproj"/>
+
+
 
 
 
