--- a/src/BloodRush.Donors.API/appsettings.json
+++ b/src/BloodRush.Donors.API/appsettings.json
@@ -13,7 +13,8 @@
   },
   "ConnectionStrings": {
     //"App": "Server=192.168.1.138,1433;Database=BloodRush;User Id=sa;Password=cE4BCs8G7+H+_#1;Trusted_Connection=False;TrustServerCertificate=True;"
-    "DefaultConnection": "Server=localhost,1433;Database=BloodRush;User Id=sa;Password=Database2023!;Trusted_Connection=False;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost,1433;Database=BloodRush;User Id=sa;Password=Database2023!;Trusted_Connection=False;TrustServerCertificate=True;",
+    "Redis": "localhost"
   },
   "Logging": {
     "LogLevel": {
