--- a/src/BloodRush.Facility.API/BloodRush.Facility.API.csproj
+++ b/src/BloodRush.Facility.API/BloodRush.Facility.API.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1"/>
+        <PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
         <PackageReference Include="Dapper" Version="2.1.24" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0"/>
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.2"/>
