--- a/src/BloodRush.Tasks/BloodRush.Tasks.csproj
+++ b/src/BloodRush.Tasks/BloodRush.Tasks.csproj
@@ -7,6 +7,7 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Dapper" Version="2.1.24" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.19.0"/>
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.RabbitMQ" Version="2.0.3" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Storage.Queues" Version="5.2.0" />
@@ -14,6 +15,7 @@
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.15.1"/>
         <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14"/>
+        <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
     </ItemGroup>
     <ItemGroup>
         <None Update="host.json">
