--- a/src/BloodRush.Notifier/BloodRush.Notifier.csproj
+++ b/src/BloodRush.Notifier/BloodRush.Notifier.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="Dapper" Version="2.1.24" />
+        <PackageReference Include="MediatR" Version="12.1.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14"/>
