--- a/src/BloodRush.Facility.API/BloodRush.Facility.API.csproj
+++ b/src/BloodRush.Facility.API/BloodRush.Facility.API.csproj
@@ -25,6 +25,8 @@
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
         <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+        <PackageReference Include="Hangfire.Dashboard.Basic.Authentication" Version="7.0.1"/>
+        <PackageReference Include="Hangfire.SqlServer" Version="1.7.34"/>
     </ItemGroup>
 
     <ItemGroup>
@@ -36,6 +38,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\BloodRush.Contracts\BloodRush.Contracts.csproj" />
+
+
 
 
 
